--- a/StationProject/Properties/launchSettings.json
+++ b/StationProject/Properties/launchSettings.json
@@ -9,6 +9,17 @@
         }
     },
     "profiles": {
+        "watcher": {
+            "commandName": "Executable",
+            "dotnetRunMessages": true,
+            "workingDirectory": "$(ProjectDir)",
+            "executablePath": "dotnet",
+            "commandLineArgs": "watch run debug --launch-profile http",
+            "applicationUrl": "http://localhost:5263",
+            "environmentVariables": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            }
+        },
         "http": {
             "commandName": "Project",
             "dotnetRunMessages": true,
