--- a/StationProject/StationProject.csproj
+++ b/StationProject/StationProject.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
+        <PackageReference Include="Radzen.Blazor" Version="*" />
     </ItemGroup>
 
     <ItemGroup>
