--- a/StationProject/appsettings.json
+++ b/StationProject/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=station;Username=postgres;Password=123;"
+    "DefaultConnection": "Data Source=app.db"
   },
   "Logging": {
     "LogLevel": {
